# datasette-user-profiles

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
datasette_user_profiles/: __init__.py  avatar.py  config.py  hookspecs.py  internal_migrations.py  manifest.json  page_data.py  router.py  seed.py
datasette_user_profiles/routes/: api.py  pages.py
datasette_user_profiles/templates/: user_profiles_base.html
frontend/: api.d.ts  package-lock.json  vite.config.ts
frontend/src/: store.svelte.ts
frontend/src/page_data/: EditProfilePageData.types.ts  ProfilePageData.types.ts  ProfileSectionData.types.ts  ProfilesPageData.types.ts
frontend/src/pages/edit_profile/: EditProfilePage.svelte  index.ts
frontend/src/pages/profile/: ProfilePage.svelte  index.ts
frontend/src/pages/profiles/: ProfilesPage.svelte  index.ts
sample/: sample_seed_actors.py  sample_wall_plugin.py  seed_actors.json
scripts/: typegen-pagedata.py
tests/: test_seed.py  test_user_profiles.py
