[project]
name = "datasette-user-profiles"
version = "0.1.0a5"
description = "Plugin to allow users to define their own profiles"
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = "Apache-2.0"
classifiers = [
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1a23",
    "datasette-plugin-router>=0.0.1a2",
    "datasette-vite>=0.0.1a2",
    "pydantic>=2",
    "sqlite-migrate>=0.1b0",
    "sqlite-utils>=3.38",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/datasette/datasette-user-profiles"
Changelog = "https://github.com/datasette/datasette-user-profiles/releases"
Issues = "https://github.com/datasette/datasette-user-profiles/issues"
CI = "https://github.com/datasette/datasette-user-profiles/actions"

[project.entry-points.datasette]
user_profiles = "datasette_user_profiles"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.package-data]
datasette_user_profiles = ["static/**/*", "templates/*", "manifest.json", "icons/*.svg"]

[tool.setuptools.packages.find]
exclude = [
    "frontend",
]
